# CADSS-prototype

./: CMakeLists.txt  README.md
Calculation_core/: CalController.cpp  CalController.hpp  CalPlanner.cpp  CalPlanner.hpp  CalPredictor.cpp  CalPredictor.hpp  CalTask.cpp  CalTask.hpp  TaskManager.cpp  TaskManager.hpp
Controller/: Controller.cpp  Controller.hpp  PerfectController.cpp  PerfectController.hpp
Log/: AgentLog.cpp  AgentLog.hpp  LogContent.hpp  LogManager.cpp  LogManager.hpp  LogRequest.cpp  LogRequest.hpp  LogResponse.cpp  LogResponse.hpp
Model/: PerfectModel.cpp  PerfectModel.hpp
Predictor/: Predictor.cpp  Predictor.hpp
Simulator/: SimuClock.cpp  SimuClock.hpp  Simulator.cpp  Simulator.hpp
ThreadPool/: MyThreadPool.cpp  MyThreadPool.hpp  ThreadController.cpp  ThreadController.hpp  ThreadTask.cpp  ThreadTask.hpp
